syntax = "proto3";

package orderingpb;

message Order {
  string id = 1;
  string customer_id = 2;
  string payment_id = 3;
  repeated Item items = 4;
  string status = 5;
}

message Item {
  string store_id = 1;
  string product_id = 2;
  string store_name = 3;
  string product_name = 4;
  double price = 5;
  int32 quantity = 6;
}
